# caffeProjects

./: README.md
mnistAnalyse/: 2d_features.txt  CMakeLists.txt  lenet.prototxt  lenet_2features_iter_10000.caffemodel  mnistAnalyse.cpp  mnist_2features.m  norelu.fig
mnistTest/: CMakeLists.txt  README.md  head.h  lenet_iter_10000.caffemodel  mnistTest.cpp  mnistTest2.cpp
